welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:10: error: not found: value baisserBrosse
    baisserBrosse();
    ^SlugHunting:11: error: not found: value leverBrosse
    leverBrosse();
    ^